Bug fix to make privacy policy links visible.

--- a/less/main/theme.less
+++ b/less/main/theme.less
@@ -165,7 +165,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
     background-color: @color__footer--background;
     padding: 15px 0;
     
-    a {
+    a[class] {
         padding: 0 10px;
 	    font-family: @font__navigation--font-family;
 		color: @color__footer--border;
